// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination/> renders correctly 1`] = `
<ul
  className="Pagination-pagination-1"
>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root-36 MuiButton-root-10 MuiButton-text-12 MuiButton-flat-15 Pagination-paginationLink-3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-11"
      >
        1
      </span>
      <span
        className="MuiTouchRipple-root-39"
      />
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root-36 MuiButton-root-10 MuiButton-text-12 MuiButton-flat-15 Pagination-paginationLink-3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-11"
      >
        ...
      </span>
      <span
        className="MuiTouchRipple-root-39"
      />
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root-36 MuiButton-root-10 MuiButton-text-12 MuiButton-flat-15 Pagination-paginationLink-3 Pagination-primary-4"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-11"
      >
        5
      </span>
      <span
        className="MuiTouchRipple-root-39"
      />
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root-36 MuiButton-root-10 MuiButton-text-12 MuiButton-flat-15 Pagination-paginationLink-3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-11"
      >
        6
      </span>
      <span
        className="MuiTouchRipple-root-39"
      />
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root-36 MuiButton-root-10 MuiButton-text-12 MuiButton-flat-15 Pagination-paginationLink-3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-11"
      >
        7
      </span>
      <span
        className="MuiTouchRipple-root-39"
      />
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root-36 MuiButton-root-10 MuiButton-text-12 MuiButton-flat-15 Pagination-paginationLink-3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-11"
      >
        ...
      </span>
      <span
        className="MuiTouchRipple-root-39"
      />
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root-36 MuiButton-root-10 MuiButton-text-12 MuiButton-flat-15 Pagination-paginationLink-3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-11"
      >
        11
      </span>
      <span
        className="MuiTouchRipple-root-39"
      />
    </button>
  </li>
</ul>
`;

exports[`<Pagination/> renders correctly when onclick props is passed 1`] = `
<ul
  className="Pagination-pagination-1"
>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root-36 MuiButton-root-10 MuiButton-text-12 MuiButton-flat-15 Pagination-paginationLink-3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-11"
      >
        1
      </span>
      <span
        className="MuiTouchRipple-root-39"
      />
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root-36 MuiButton-root-10 MuiButton-text-12 MuiButton-flat-15 Pagination-paginationLink-3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-11"
      >
        ...
      </span>
      <span
        className="MuiTouchRipple-root-39"
      />
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root-36 MuiButton-root-10 MuiButton-text-12 MuiButton-flat-15 Pagination-paginationLink-3 Pagination-primary-4"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-11"
      >
        5
      </span>
      <span
        className="MuiTouchRipple-root-39"
      />
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root-36 MuiButton-root-10 MuiButton-text-12 MuiButton-flat-15 Pagination-paginationLink-3"
      disabled={false}
      onBlur={[Function]}
      onClick={[MockFunction]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-11"
      >
        6
      </span>
      <span
        className="MuiTouchRipple-root-39"
      />
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root-36 MuiButton-root-10 MuiButton-text-12 MuiButton-flat-15 Pagination-paginationLink-3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-11"
      >
        7
      </span>
      <span
        className="MuiTouchRipple-root-39"
      />
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root-36 MuiButton-root-10 MuiButton-text-12 MuiButton-flat-15 Pagination-paginationLink-3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-11"
      >
        ...
      </span>
      <span
        className="MuiTouchRipple-root-39"
      />
    </button>
  </li>
  <li
    className="Pagination-paginationItem-2"
  >
    <button
      className="MuiButtonBase-root-36 MuiButton-root-10 MuiButton-text-12 MuiButton-flat-15 Pagination-paginationLink-3"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-11"
      >
        11
      </span>
      <span
        className="MuiTouchRipple-root-39"
      />
    </button>
  </li>
</ul>
`;
